--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -14,6 +15,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
     "mongoose": "^6.4.0",
     "morgan": "~1.9.1",
